--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
           <table class="table">
             <tr>
               <th>Languages</th>
-              <td>C/C++, PHP, HTML5/CSS, JavaScript, Shell/Bash, VBA</td>
+              <td>C/C++, PHP, HTML5/CSS, JavaScript/AJAX, Shell/Bash, VBA</td>
             </tr>
 <!--
             <tr>
@@ -111,11 +111,12 @@
         </div>
         <div class="col-md-11 col-md-offset-1">
           <ul>
-            <li>Over four years programming experience and over six months self-eduated web development experience</li>
+            <li>Over four years programming experience and over six months intensive web development training</li>
             <li>Experienced in leading, coordinating projects as well as working independently</li>
             <li>Detail oriented, strong aptitude for diagnosing and solving problems</li>
             <li>Ability to focus in a high pressured environment and work under a tight schedule with strict deadlines</li>
-            <li>Language proficiency in English and Mandarin</li>
+            <li>Be able to pick up new concepts and knowledge in a reasonable time</li>
+<!--            <li>Language proficiency in English and Mandarin</li>-->
           </ul>
         </div>
       </div>
@@ -258,7 +259,7 @@
         <div class="col-md-11 col-md-offset-1">
           <ul>
             <li>Website server built with LAMP (Linux, Apache, MySQL and PHP)</li>
-            <li>Currently building a Content Management System with Object Oriented PHP</li>
+            <li>Built a content management system with authentication, searching, posting and user management features</li>
             <li>Taking online courses of web development in Udamy</li>
             <li>Interested in mountain biking & running - compeleted half marathon</li>
             <li>See source for other projects at <strong><a href="https://github.com/kang3889631">github.com/kang3889631</a></strong></li>
